refactor: renaming and envName